# aura_browser

./: .gitignore  BookmarkManager.cpp  BookmarkManager.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  DataManager.cpp  DataManager.h  HistoryManager.cpp  HistoryManager.h  README.md  SplashScreen.cpp  SplashScreen.h  TabWidget.cpp  TabWidget.h  main.cpp  resources.qrc
resources/: home.html  page_template.html
